renamed internal imports for packaging

--- a/pyta/template.ipynb
+++ b/pyta/template.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "# Kevin's and mine stuff\n",
-    "import data_loader as dl\n",
-    "import arpys_wp as wp\n",
+    "import pyta.data_loader as dl\n",
+    "import pyta.arpys_wp as wp\n",
     "# general python shit\n",
     "import numpy as np\n",
     "from importlib import reload as rl\n",
