Fixed #21 by cleaning up all imports

--- a/piva/template.ipynb
+++ b/piva/template.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "# Kevin's and mine stuff\n",
-    "import pyta.data_loader as dl\n",
-    "import pyta.arpys_wp as wp\n",
+    "import piva.data_loader as dl\n",
+    "import piva.arpys_wp as wp\n",
     "# general python shit\n",
     "import numpy as np\n",
     "from importlib import reload as rl\n",
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imported from pyta\n",
+    "# imported from piva\n",
     "path = ''\n",
     "fname = ''\n",
     "slit_idx, e_idx = , ,\n",
