changes jupyter functionality to jupyter-lab and fixes bugs with old naming; closes #43

--- a/piva/template.ipynb
+++ b/piva/template.ipynb
@@ -7,43 +7,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kevin's and mine stuff\n",
+    "# piva packages\n",
     "import piva.data_loader as dl\n",
-    "import piva.arpys_wp as wp\n",
-    "# general python shit\n",
+    "import piva.working_procedures as wp\n",
+    "import piva.my_constants as const\n",
+    "# general python packages\n",
     "import numpy as np\n",
-    "from importlib import reload as rl\n",
-    "from scipy import optimize as opt\n",
-    "from os import listdir\n",
-    "# for plotting\n",
+    "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "from matplotlib import interactive\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import colors\n",
-    "# change some default values\n",
-    "wp.set_mpl_rcparams(print_params=False)\n",
-    "\n",
-    "# %matplotlib widget"
+    "from importlib import reload as rl\n",
+    "# from scipy import optimize as opt\n",
+    "# import scipy.fftpack as ft\n",
+    "# from scipy import integrate as it\n",
+    "from os import listdir\n",
+    "# change some default values for better visualisation\n",
+    "font_size = 20\n",
+    "wp.set_mpl_rcparams(fontsize=font_size, print_params=False)\n",
+    "# use \"matplotlib qt\" to open plots in interactive window\n",
+    "use_qt = True\n",
+    "fontsize=24\n",
+    "if use_qt:\n",
+    "    %matplotlib qt\n",
+    "    mpl.rcParams['ytick.color'] = 'black'\n",
+    "    mpl.rcParams['xtick.color'] = 'black'\n",
+    "    mpl.rcParams['xtick.color'] = 'black'\n",
+    "else:\n",
+    "    %matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "spectacular-course",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imported from piva\n",
+    "# load data and import values from piva\n",
     "path = ''\n",
     "fname = ''\n",
-    "slit_idx, e_idx = , ,\n",
-    "# load data and cuts\n",
     "dataset = dl.load_data(path + fname)\n",
     "data, slit_ax, erg_ax = dataset.data, dataset.yscale, dataset.zscale\n",
-    "bm = data[0, :, :]\n",
-    "plot_x = data[0, slit_idx, e_idx]\n",
-    "plot_y = data[0, :, e_idx]"
+    "slit_idx, e_idx = , ,"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e100042-efef-4e4e-ab58-36071669bbc3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -62,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.8"
   },
   "varInspector": {
    "cols": {
