implements linking functionality fo _2D- and _3Dviewer, closes #7

--- a/piva/ipynb_templates/template-metadata.ipynb
+++ b/piva/ipynb_templates/template-metadata.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from piva.data_loader import DataloaderBloch as dl\n",
+    "from piva.data_loader import Dataloader as dl\n",
     "from piva.working_procedures import get_step\n",
     "from pathlib import Path\n",
     "from os.path import getmtime\n",
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Specify path\n",
@@ -67,26 +69,29 @@
     "V_slit=[]\n",
     "comments=[]\n",
     "for idx, file in enumerate(files):\n",
-    "    temp.append(file.temp)\n",
-    "    hv.append(file.hv)\n",
-    "    grating.append(' ')\n",
-    "    polarization.append(file.polarization)\n",
-    "    PE.append(file.PE)\n",
+    "    temp.append('-')\n",
+    "    hv.append(\"{:.2f}\".format(file.hv))\n",
+    "    grating.append('-')\n",
+    "    polarization.append('-')\n",
+    "    PE.append(int(file.PE))\n",
     "    lens_mode.append(file.lens_mode)\n",
-    "    anal_slit.append(file.anal_slit)\n",
+    "    anal_slit.append('-')\n",
     "    acq_mode.append(file.acq_mode)\n",
     "    DT.append(file.DT)\n",
-    "    x_pos.append(file.x)\n",
-    "    y_pos.append(file.y)\n",
-    "    z_pos.append(file.z)\n",
-    "    theta.append(file.theta)\n",
+    "    x_pos.append(\"{:.2f}\".format(file.x))\n",
+    "    y_pos.append(\"{:.2f}\".format(file.y))\n",
+    "    z_pos.append(\"{:.2f}\".format(file.z))\n",
+    "    theta.append(\"{:.2f}\".format(file.theta))\n",
+    "    tilt.append(\"{:.2f}\".format(file.tilt))\n",
+    "    phi.append('-')\n",
     "    scan_type.append(file.scan_type)\n",
-    "    phi.append(file.phi)\n",
-    "    tilt.append(file.tilt)\n",
-    "    energy_range.append('{:.2f} -> {:.2f}'.format(file.zscale.min(), file.zscale.max()))\n",
-    "    energy_step.append(get_step(file.zscale))\n",
-    "    FE_slit.append(file.FE)\n",
-    "    V_slit.append(file.exit_slit)\n",
+    "    e_start = file.zscale[0]\n",
+    "    e_nsteps = file.zscale.size\n",
+    "    e_stop = file.zscale[-1]\n",
+    "    energy_range.append('{:.2f} -> {:.2f}'.format(e_start, e_stop))\n",
+    "    energy_step.append('{:.3}'.format(get_step(file.zscale) * 1000))\n",
+    "    FE_slit.append('-')\n",
+    "    V_slit.append('-')\n",
     "del files"
    ]
   },
@@ -158,8 +163,7 @@
    ],
    "source": [
     "# print what you want\n",
-    "d = {\n",
-    "     'scan name':fnames,\n",
+    "d = {'scan name':fnames,\n",
     "     'date and time':date_and_time,\n",
     "     'T, K':temp,\n",
     "     'hv, eV':hv,\n",
