improves the showcase and fixes some naming issues

--- a/piva/ipynb_templates/template-metadata.ipynb
+++ b/piva/ipynb_templates/template-metadata.ipynb
@@ -53,7 +53,7 @@
     "polarization=[]\n",
     "PE=[]\n",
     "lens_mode=[]\n",
-    "anal_slit=[]\n",
+    "ana_slit=[]\n",
     "acq_mode=[]\n",
     "DT=[]\n",
     "x_pos=[]\n",
@@ -75,7 +75,7 @@
     "    polarization.append('-')\n",
     "    PE.append(int(file.PE))\n",
     "    lens_mode.append(file.lens_mode)\n",
-    "    anal_slit.append('-')\n",
+    "    ana_slit.append('-')\n",
     "    acq_mode.append(file.acq_mode)\n",
     "    DT.append(file.DT)\n",
     "    x_pos.append(\"{:.2f}\".format(file.x))\n",
@@ -138,7 +138,7 @@
        "      <th>tilt (step), deg</th>\n",
        "      <th>scan type</th>\n",
        "      <th>lens mode</th>\n",
-       "      <th>anal slit</th>\n",
+       "      <th>ana slit</th>\n",
        "      <th>E range, eV</th>\n",
        "      <th>E step, meV</th>\n",
        "      <th>acq mode</th>\n",
@@ -152,7 +152,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [scan name, date and time, T, K, hv, eV, PE, eV, PGM, polarization, FE, mm, V slit, $\\mu$m, x, mm, y, mm, z, mm, theta, deg, phi, deg, tilt (step), deg, scan type, lens mode, anal slit, E range, eV, E step, meV, acq mode, DT, ms]\n",
+       "Columns: [scan name, date and time, T, K, hv, eV, PE, eV, PGM, polarization, FE, mm, V slit, $\\mu$m, x, mm, y, mm, z, mm, theta, deg, phi, deg, tilt (step), deg, scan type, lens mode, ana slit, E range, eV, E step, meV, acq mode, DT, ms]\n",
        "Index: []"
       ]
      },
@@ -180,7 +180,7 @@
     "     'tilt (step), deg':tilt,\n",
     "     'scan type':scan_type,\n",
     "     'lens mode':lens_mode,\n",
-    "     'anal slit':anal_slit,\n",
+    "     'ana slit':ana_slit,\n",
     "     'E range, eV':energy_range,\n",
     "     'E step, meV':energy_step,\n",
     "     'acq mode':acq_mode,\n",
