bug fixes in experimental logbooks

--- a/piva/ipynb_templates/template-metadata.ipynb
+++ b/piva/ipynb_templates/template-metadata.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from piva.data_loader import Dataloader as dl\n",
+    "from piva.data_loaders import Dataloader as dl\n",
     "from piva.working_procedures import get_step\n",
     "from pathlib import Path\n",
     "from os.path import getmtime\n",
