--- a/piva/ipynb_templates/template.ipynb
+++ b/piva/ipynb_templates/template.ipynb
@@ -8,9 +8,9 @@
    "outputs": [],
    "source": [
     "# piva packages\n",
-    "import piva.data_loader as dl\n",
+    "import piva.data_loaders as dl\n",
     "import piva.working_procedures as wp\n",
-    "import piva.my_constants as const\n",
+    "import piva.constants as const\n",
     "# general python packages\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -24,8 +24,6 @@
     "# from scipy import integrate as it\n",
     "from os import listdir\n",
     "# change some default values for better visualisation\n",
-    "font_size = 20\n",
-    "wp.set_mpl_rcparams(fontsize=font_size, print_params=False)\n",
     "# use \"matplotlib qt\" to open plots in interactive window\n",
     "use_qt = True\n",
     "fontsize=24\n",
