--- a/piva/ipynb_templates/template.ipynb
+++ b/piva/ipynb_templates/template.ipynb
@@ -44,11 +44,10 @@
    "outputs": [],
    "source": [
     "# load data and import values from piva\n",
-    "path = ''\n",
-    "fname = ''\n",
+    "path = 'path/to/the/file'\n",
+    "fname = 'file_name'\n",
     "dataset = dl.load_data(path + fname)\n",
-    "data, slit_ax, erg_ax = dataset.data, dataset.yscale, dataset.zscale\n",
-    "slit_idx, e_idx = , ,"
+    "data, slit_ax, erg_ax = dataset.data, dataset.yscale, dataset.zscale"
    ]
   },
   {
@@ -76,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.7"
   },
   "varInspector": {
    "cols": {
