--- a/piva/ipynb_templates/template.ipynb
+++ b/piva/ipynb_templates/template.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load data and import values from piva\n",
+    "# load data\n",
     "path = 'path/to/the/file'\n",
     "fname = 'file_name'\n",
     "dataset = dl.load_data(path + fname)\n",
