--- a/piva/ipynb_templates/template-metadata.ipynb
+++ b/piva/ipynb_templates/template-metadata.ipynb
@@ -36,7 +36,7 @@
     "        fnames.append(fileobj.name)\n",
     "        date_and_time.append(datetime.fromtimestamp(getmtime(filename)))\n",
     "        print(filename)\n",
-    "    except (ValueError,  OSError, NotImplementedError) as e:\n",
+    "    except (ValueError,  OSError, NotImplementedError):\n",
     "        continue"
    ]
   },
