--- a/piva/ipynb_templates/template.ipynb
+++ b/piva/ipynb_templates/template.ipynb
@@ -9,21 +9,13 @@
    "source": [
     "# piva packages\n",
     "import piva.data_loaders as dl\n",
-    "import piva.working_procedures as wp\n",
-    "import piva.constants as const\n",
     "# general python packages\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "from matplotlib import interactive\n",
-    "from matplotlib import pyplot as plt\n",
-    "from matplotlib import colors\n",
-    "from importlib import reload as rl\n",
+    "# from matplotlib import pyplot as plt\n",
     "# from scipy import optimize as opt\n",
-    "# import scipy.fftpack as ft\n",
-    "# from scipy import integrate as it\n",
-    "from os import listdir\n",
-    "# change some default values for better visualisation\n",
+    "# change some default values for better view\n",
     "# use \"matplotlib qt\" to open plots in interactive window\n",
     "use_qt = True\n",
     "fontsize=24\n",
@@ -75,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "varInspector": {
    "cols": {
