improves compliance with ruff

--- a/docs/source/notebooks/analysis.ipynb
+++ b/docs/source/notebooks/analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "literary-military",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
     "# general python utilities\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "from matplotlib import interactive\n",
+    "# from matplotlib import interactive\n",
     "import pandas as pd\n",
     "# from scipy import optimize as opt\n",
     "\n",
