--- a/piva/ipynb_templates/template.ipynb
+++ b/piva/ipynb_templates/template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "literary-military",
    "metadata": {},
    "outputs": [],
@@ -10,9 +10,9 @@
     "# piva packages\n",
     "import piva.data_loaders as dl\n",
     "# general python packages\n",
-    "import numpy as np\n",
+    "# import numpy as np\n",
     "import matplotlib as mpl\n",
-    "from matplotlib import interactive\n",
+    "# from matplotlib import interactive\n",
     "# from matplotlib import pyplot as plt\n",
     "# from scipy import optimize as opt\n",
     "# change some default values for better view\n",
