ruff format and changes from the 2nd review

--- a/docs/source/notebooks/analysis.ipynb
+++ b/docs/source/notebooks/analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "literary-military",
    "metadata": {},
    "outputs": [],
@@ -30,9 +30,11 @@
     "# piva packages\n",
     "import piva.data_loaders as dl\n",
     "import piva.working_procedures as wp\n",
+    "\n",
     "# general python utilities\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
+    "\n",
     "# from matplotlib import interactive\n",
     "import pandas as pd\n",
     "# from scipy import optimize as opt\n",
@@ -47,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "spectacular-course",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load file and extract data for easier access\n",
-    "path = './'\n",
-    "fname = 'Au-test_spectrum.p'\n",
+    "path = \"./\"\n",
+    "fname = \"Au-test_spectrum.p\"\n",
     "dataset = dl.load_data(path + fname)\n",
     "data, slit_ax, erg_ax = dataset.data[0, :, :], dataset.yscale, dataset.zscale"
    ]
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "92f02417-260c-4113-b49b-4fa4f02b990c",
    "metadata": {},
    "outputs": [
@@ -89,7 +91,9 @@
    "source": [
     "# plot and fit the measured scan\n",
     "fig = plt.figure(figsize=[11, 4])\n",
-    "gs = fig.add_gridspec(1, 2, wspace=0.42, hspace=0.25, top=0.9, bottom=0.1, left=0.1, right=0.95)\n",
+    "gs = fig.add_gridspec(\n",
+    "    1, 2, wspace=0.42, hspace=0.25, top=0.9, bottom=0.1, left=0.1, right=0.95\n",
+    ")\n",
     "ax00 = fig.add_subplot(gs[0, 0])\n",
     "ax01 = fig.add_subplot(gs[0, 1])\n",
     "\n",
@@ -97,25 +101,27 @@
     "ee, kk = np.meshgrid(erg_ax, slit_ax)\n",
     "\n",
     "ax00.pcolormesh(ee, kk, data)\n",
-    "ax00.set_title('Detector image')\n",
-    "ax00.set_xlabel('Binding energy (eV)')\n",
-    "ax00.set_ylabel('Analyzer angle (deg)')\n",
+    "ax00.set_title(\"Detector image\")\n",
+    "ax00.set_xlabel(\"Binding energy (eV)\")\n",
+    "ax00.set_ylabel(\"Analyzer angle (deg)\")\n",
     "\n",
     "\n",
     "# analyze the data\n",
-    "edc = wp.normalize(np.sum(data, axis=0))                        # summarize all angular channels\n",
-    "ε0 = erg_ax[wp.detect_step(edc)]                                # find initial guess for E_F\n",
+    "edc = wp.normalize(np.sum(data, axis=0))  # summarize all angular channels\n",
+    "ε0 = erg_ax[wp.detect_step(edc)]  # find initial guess for E_F\n",
     "\n",
-    "res = wp.fit_fermi_dirac(erg_ax, edc, ε0, T=dataset.temp)       # fit Fermi-Dirac distrubution with a Gausian component\n",
-    "par, fit_func, cov, resol, Δresol = res                         # extract fitting results\n",
-    "Fermi_Dirac = fit_func(erg_ax)                                  # get the Fermi-Dirac distribution\n",
+    "res = wp.fit_fermi_dirac(\n",
+    "    erg_ax, edc, ε0, T=dataset.temp\n",
+    ")  # fit Fermi-Dirac distrubution with a Gausian component\n",
+    "par, fit_func, cov, resol, Δresol = res  # extract fitting results\n",
+    "Fermi_Dirac = fit_func(erg_ax)  # get the Fermi-Dirac distribution\n",
     "\n",
     "# plot the summed EDC and the fitted curve\n",
-    "ax01.plot(erg_ax, edc, label='Data')\n",
-    "ax01.plot(erg_ax, Fermi_Dirac, label='Fermi-Dirac distribution')\n",
-    "ax01.set_title('Summed EDCs')\n",
-    "ax01.set_xlabel('Binding energy (eV)')\n",
-    "ax01.set_ylabel('Spectral weight (a.u.)')\n",
+    "ax01.plot(erg_ax, edc, label=\"Data\")\n",
+    "ax01.plot(erg_ax, Fermi_Dirac, label=\"Fermi-Dirac distribution\")\n",
+    "ax01.set_title(\"Summed EDCs\")\n",
+    "ax01.set_xlabel(\"Binding energy (eV)\")\n",
+    "ax01.set_ylabel(\"Spectral weight (a.u.)\")\n",
     "ax01.legend();"
    ]
   },
@@ -131,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "6eb40288-1e48-48d2-b01e-52059f4b854b",
    "metadata": {},
    "outputs": [
@@ -184,18 +190,24 @@
        "0                  0.82  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Ef  = '{:.2f}'.format(par[0] * 1000)\n",
-    "ΔEf = '{:.2f}'.format(np.sqrt(np.diag(cov)[0]) * 1000)\n",
-    "σ   = '{:.2f}'.format(resol * 1000)\n",
-    "Δσ  = '{:.2f}'.format(Δresol * 1000)\n",
+    "Ef = \"{:.2f}\".format(par[0] * 1000)\n",
+    "ΔEf = \"{:.2f}\".format(np.sqrt(np.diag(cov)[0]) * 1000)\n",
+    "σ = \"{:.2f}\".format(resol * 1000)\n",
+    "Δσ = \"{:.2f}\".format(Δresol * 1000)\n",
     "\n",
-    "df = {'scan name':[fname], 'Ef, meV':[Ef], 'Ef error, meV':[ΔEf], 'resolution, meV':[σ], 'resolution error, meV':[Δσ]}\n",
+    "df = {\n",
+    "    \"scan name\": [fname],\n",
+    "    \"Ef, meV\": [Ef],\n",
+    "    \"Ef error, meV\": [ΔEf],\n",
+    "    \"resolution, meV\": [σ],\n",
+    "    \"resolution error, meV\": [Δσ],\n",
+    "}\n",
     "df = pd.DataFrame(data=df)\n",
     "df"
    ]
