--- a/piva/ipynb_templates/template-metadata.ipynb
+++ b/piva/ipynb_templates/template-metadata.ipynb
@@ -23,10 +23,10 @@
    "outputs": [],
    "source": [
     "# Specify path\n",
-    "path = ''\n",
+    "path = \"\"\n",
     "# open files and save scans' names\n",
-    "files=[]\n",
-    "fnames=[]\n",
+    "files = []\n",
+    "fnames = []\n",
     "date_and_time = []\n",
     "for fileobj in sorted(Path(path).iterdir(), key=getmtime):\n",
     "    filename = str(fileobj)\n",
@@ -36,7 +36,7 @@
     "        fnames.append(fileobj.name)\n",
     "        date_and_time.append(datetime.fromtimestamp(getmtime(filename)))\n",
     "        print(filename)\n",
-    "    except (ValueError,  OSError, NotImplementedError):\n",
+    "    except (ValueError, OSError, NotImplementedError):\n",
     "        continue"
    ]
   },
@@ -47,35 +47,35 @@
    "outputs": [],
    "source": [
     "# collect the data that are actually interesting\n",
-    "temp=[]\n",
-    "hv=[]\n",
-    "grating=[]\n",
-    "polarization=[]\n",
-    "PE=[]\n",
-    "lens_mode=[]\n",
-    "ana_slit=[]\n",
-    "acq_mode=[]\n",
-    "DT=[]\n",
-    "x_pos=[]\n",
-    "y_pos=[]\n",
-    "z_pos=[]\n",
-    "theta=[]\n",
-    "phi=[]\n",
-    "tilt=[]\n",
-    "scan_type=[]\n",
-    "energy_range=[]\n",
-    "energy_step=[]\n",
-    "FE_slit=[]\n",
-    "V_slit=[]\n",
-    "comments=[]\n",
+    "temp = []\n",
+    "hv = []\n",
+    "grating = []\n",
+    "polarization = []\n",
+    "PE = []\n",
+    "lens_mode = []\n",
+    "ana_slit = []\n",
+    "acq_mode = []\n",
+    "DT = []\n",
+    "x_pos = []\n",
+    "y_pos = []\n",
+    "z_pos = []\n",
+    "theta = []\n",
+    "phi = []\n",
+    "tilt = []\n",
+    "scan_type = []\n",
+    "energy_range = []\n",
+    "energy_step = []\n",
+    "FE_slit = []\n",
+    "V_slit = []\n",
+    "comments = []\n",
     "for idx, file in enumerate(files):\n",
-    "    temp.append('-')\n",
+    "    temp.append(\"-\")\n",
     "    hv.append(\"{:.2f}\".format(file.hv))\n",
-    "    grating.append('-')\n",
-    "    polarization.append('-')\n",
+    "    grating.append(\"-\")\n",
+    "    polarization.append(\"-\")\n",
     "    PE.append(int(file.PE))\n",
     "    lens_mode.append(file.lens_mode)\n",
-    "    ana_slit.append('-')\n",
+    "    ana_slit.append(\"-\")\n",
     "    acq_mode.append(file.acq_mode)\n",
     "    DT.append(file.DT)\n",
     "    x_pos.append(\"{:.2f}\".format(file.x))\n",
@@ -83,15 +83,15 @@
     "    z_pos.append(\"{:.2f}\".format(file.z))\n",
     "    theta.append(\"{:.2f}\".format(file.theta))\n",
     "    tilt.append(\"{:.2f}\".format(file.tilt))\n",
-    "    phi.append('-')\n",
+    "    phi.append(\"-\")\n",
     "    scan_type.append(file.scan_type)\n",
     "    e_start = file.zscale[0]\n",
     "    e_nsteps = file.zscale.size\n",
     "    e_stop = file.zscale[-1]\n",
-    "    energy_range.append('{:.2f} -> {:.2f}'.format(e_start, e_stop))\n",
-    "    energy_step.append('{:.3}'.format(get_step(file.zscale) * 1000))\n",
-    "    FE_slit.append('-')\n",
-    "    V_slit.append('-')\n",
+    "    energy_range.append(\"{:.2f} -> {:.2f}\".format(e_start, e_stop))\n",
+    "    energy_step.append(\"{:.3}\".format(get_step(file.zscale) * 1000))\n",
+    "    FE_slit.append(\"-\")\n",
+    "    V_slit.append(\"-\")\n",
     "del files"
    ]
   },
@@ -163,32 +163,33 @@
    ],
    "source": [
     "# print what you want\n",
-    "d = {'scan name':fnames,\n",
-    "     'date and time':date_and_time,\n",
-    "     'T, K':temp,\n",
-    "     'hv, eV':hv,\n",
-    "     'PE, eV':PE,\n",
-    "     'PGM':grating,\n",
-    "     'polarization':polarization,\n",
-    "     'FE, mm':FE_slit,\n",
-    "     'V slit, $\\mu$m':V_slit,\n",
-    "     'x, mm':x_pos,\n",
-    "     'y, mm':y_pos,\n",
-    "     'z, mm':z_pos,\n",
-    "     'theta, deg':theta,\n",
-    "     'phi, deg':phi,\n",
-    "     'tilt (step), deg':tilt,\n",
-    "     'scan type':scan_type,\n",
-    "     'lens mode':lens_mode,\n",
-    "     'ana slit':ana_slit,\n",
-    "     'E range, eV':energy_range,\n",
-    "     'E step, meV':energy_step,\n",
-    "     'acq mode':acq_mode,\n",
-    "     'DT, ms':DT\n",
-    "    }\n",
-    "df = pd.DataFrame(data=d)#.sort_values(by='date and time')\n",
-    "pd.set_option('display.max_columns', 50)\n",
-    "pd.set_option('display.max_rows', 500)\n",
+    "d = {\n",
+    "    \"scan name\": fnames,\n",
+    "    \"date and time\": date_and_time,\n",
+    "    \"T, K\": temp,\n",
+    "    \"hv, eV\": hv,\n",
+    "    \"PE, eV\": PE,\n",
+    "    \"PGM\": grating,\n",
+    "    \"polarization\": polarization,\n",
+    "    \"FE, mm\": FE_slit,\n",
+    "    \"V slit, $\\mu$m\": V_slit,\n",
+    "    \"x, mm\": x_pos,\n",
+    "    \"y, mm\": y_pos,\n",
+    "    \"z, mm\": z_pos,\n",
+    "    \"theta, deg\": theta,\n",
+    "    \"phi, deg\": phi,\n",
+    "    \"tilt (step), deg\": tilt,\n",
+    "    \"scan type\": scan_type,\n",
+    "    \"lens mode\": lens_mode,\n",
+    "    \"ana slit\": ana_slit,\n",
+    "    \"E range, eV\": energy_range,\n",
+    "    \"E step, meV\": energy_step,\n",
+    "    \"acq mode\": acq_mode,\n",
+    "    \"DT, ms\": DT,\n",
+    "}\n",
+    "df = pd.DataFrame(data=d)  # .sort_values(by='date and time')\n",
+    "pd.set_option(\"display.max_columns\", 50)\n",
+    "pd.set_option(\"display.max_rows\", 500)\n",
     "df"
    ]
   },
