--- a/piva/ipynb_templates/template.ipynb
+++ b/piva/ipynb_templates/template.ipynb
@@ -9,21 +9,23 @@
    "source": [
     "# piva packages\n",
     "import piva.data_loaders as dl\n",
+    "\n",
     "# general python packages\n",
     "# import numpy as np\n",
     "import matplotlib as mpl\n",
+    "\n",
     "# from matplotlib import interactive\n",
     "# from matplotlib import pyplot as plt\n",
     "# from scipy import optimize as opt\n",
     "# change some default values for better view\n",
     "# use \"matplotlib qt\" to open plots in interactive window\n",
     "use_qt = True\n",
-    "fontsize=24\n",
+    "fontsize = 24\n",
     "if use_qt:\n",
     "    %matplotlib qt\n",
-    "    mpl.rcParams['ytick.color'] = 'black'\n",
-    "    mpl.rcParams['xtick.color'] = 'black'\n",
-    "    mpl.rcParams['xtick.color'] = 'black'\n",
+    "    mpl.rcParams[\"ytick.color\"] = \"black\"\n",
+    "    mpl.rcParams[\"xtick.color\"] = \"black\"\n",
+    "    mpl.rcParams[\"xtick.color\"] = \"black\"\n",
     "else:\n",
     "    %matplotlib inline"
    ]
@@ -36,8 +38,8 @@
    "outputs": [],
    "source": [
     "# load data\n",
-    "path = 'path/to/the/file'\n",
-    "fname = 'file_name'\n",
+    "path = \"path/to/the/file\"\n",
+    "fname = \"file_name\"\n",
     "dataset = dl.load_data(path + fname)\n",
     "data, slit_ax, erg_ax = dataset.data, dataset.yscale, dataset.zscale"
    ]
